--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
-    "name": "nom-bot",
-    "version": "1.0.0",
-    "description": "Replies to any message containing 'nom' with a random response from 1000 unique options.",
-    "main": "src/index.js",
-    "type": "module",
-    "engines": {
-      "node": ">=20.0.0"
-    },
-    "scripts": {
-      "start": "node src/index.js",
-      "dev": "node --watch src/index.js",
-      "healthcheck": "node -e \"console.log('ok')\""
-    },
-    "dependencies": {
-      "discord.js": "^14.15.3"
-    }
+  "name": "nom-bot",
+  "version": "2.0.0",
+  "description": "Nom bot with stats, mini-games, marathon, and translator.",
+  "main": "src/index.js",
+  "type": "module",
+  "engines": { "node": ">=20.0.0" },
+  "scripts": {
+    "start": "node src/index.js",
+    "dev": "node --watch src/index.js"
+  },
+  "dependencies": {
+    "better-sqlite3": "^9.6.0",
+    "discord.js": "^14.15.3"
   }
-
+}
