--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "Nom bot with stats, mini-games, marathon, and translator.",
   "main": "src/index.js",
   "type": "module",
-  "engines": { "node": ">=20.0.0" },
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "start": "node src/index.js",
     "dev": "node --watch src/index.js"
   },
   "dependencies": {
-    "better-sqlite3": "^9.6.0",
-    "discord.js": "^14.15.3"
+    "discord.js": "^14.15.3",
+    "lowdb": "^7.0.1"
   }
 }
