--- a/render.yaml
+++ b/render.yaml
@@ -2,11 +2,18 @@ services:
   - type: worker
     name: nom-bot
     env: node
-    plan: free
-    region: oregon
-    buildCommand: "npm ci"
-    startCommand: "node src/index.js"
     autoDeploy: true
+    plan: starter
+    buildCommand: "npm install"
+    startCommand: "npm start"
     envVars:
       - key: DISCORD_TOKEN
         sync: false
+      - key: GUILD_IDS
+        sync: false
+      - key: DATA_DIR
+        value: "./data"
+    disk:
+      name: data
+      mountPath: /opt/render/project/src/data
+      sizeGB: 1
